Added a basic home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<title>ARJUN-API</title>
 </head>
 
 <body style="background-color:#323131; color:#fff; font-weight:900;">
