added chord genie API

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,7 @@
 <h2>APIs:</h2>
 <ol>
 	<li><a href="/guitar-tabs/">Ultimate guitar mirror</a></li><br>
-	<li><a href="/twitter-api">Twitter API mirror</a></li><br>
+	<li><a href="/twitter-api/">Twitter API mirror</a></li><br>
+	<li><a href="/chord-genie-api/">Chord Genie API</a></li><br>
 </ol>
 {% endblock %}
