Added srm news api

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,6 @@
 	<li><a href="/guitar-tabs/">Ultimate guitar mirror</a></li><br>
 	<li><a href="/twitter-api/">Twitter API mirror</a></li><br>
 	<li><a href="/chord-genie-api/">Chord Genie API</a></li><br>
+	<li><a href="/srm-news-api/">SRM news API</a></li><br>
 </ol>
 {% endblock %}
